# websearch-mcp

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: websearch-mcp.rb
docs/: architecture.md  duckduckgo-integration.md  error-handling.md  issues.md  mcp-tools-spec.md  testing-strategy.md
src/: cache.rs  config.rs  error.rs  http_client.rs  lib.rs  main.rs  rate_limiter.rs  retry.rs  server.rs
src/models/: instant_answer.rs  mod.rs  search.rs
src/tools/: instant_answer.rs  mod.rs  web_search.rs
tests/: e2e.rs  instant_answer_integration.rs  web_search_integration.rs
tests/fixtures/: instant_answer.json  instant_answer_disambig.json  instant_answer_empty.json  search_results.html  search_results_empty.html
