[package]
name = "websearch-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server providing DuckDuckGo web search"
license = "MIT"
homepage = "https://github.com/mizunomi32/websearch-mcp"
repository = "https://github.com/mizunomi32/websearch-mcp"

[package.metadata.deb]
maintainer = "mizunomi32 <mizunomi32@users.noreply.github.com>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/websearch-mcp", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
auto-req = "no"
assets = [
    { source = "target/release/websearch-mcp", dest = "/usr/bin/websearch-mcp", mode = "755" },
]

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
reqwest = { version = "0.13", features = ["json", "query"] }
scraper = "0.25"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true

[dev-dependencies]
rmcp = { version = "0.16", features = ["client", "transport-io"] }
wiremock = "0.6"
tokio-test = "0.4"
assert_matches = "1.5"
